# mint-background-switcher

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
mint_background_switcher/: __init__.py  autostart.py  cli.py  config.py  desktop.py  hotkeys.py  images.py  library_index.py  monitor.py  paths.py  rescue.py  service.py  settings_ui.py  startup.py  state.py  storage.py  tray.py  updater.py  working_storage.py
scripts/: mint-background-switcher
tests/: test_autostart.py  test_cli.py  test_config.py  test_desktop.py  test_hotkeys.py  test_images.py  test_library_index.py  test_monitor.py  test_rescue.py  test_service.py  test_settings_ui.py  test_startup.py  test_state.py  test_tray.py  test_updater.py  test_working_storage.py
